# naivebayes

./: .gitignore  NaiveBayes.ipynb  Untitled-1.ipynb  analyze_emails.py  bert-classfifer.py  bertclassification.ipynb  dataset_creator.py  evaluate.py  load_emails.py  main.py  naive_bayes.py  pyproject.toml  train.py
bert/: bert_classfifer.py
